fix mobile visiblity

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,6 +43,7 @@
 
 body {
   overflow-x: hidden;
+  max-width: 100vw !important;
 }
 
 p,
@@ -76,11 +77,13 @@ div {
   background-size: cover;
   width: 100vw;
 }
+
 .navbar-scroll {
   backdrop-filter: blur(15px);
   background: rgba(30, 30, 30, 0.95);
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
 }
+
 .image-overlay {
   background: linear-gradient(to top, rgba(0, 0, 0, 0.7) 0%, transparent 50%);
 }
@@ -100,8 +103,9 @@ div {
 }
 
 .slide-in-right {
-  @apply opacity-0 translate-x-10 transition-all duration-700;
+  @apply opacity-0;
 }
+
 .slide-in-right.visible {
-  @apply opacity-100 translate-x-0;
+  @apply opacity-100 transition-opacity duration-700;
 }
